--- a/grid.html
+++ b/grid.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        .grid-container{
+            display: grid;
+            background-color: rgb(30, 32, 65);
+            width: 90%;
+            height:80vh;
+        }
+    </style>
     <title>Grid Layout</title>
 </head>
 <body>
-    
+    <div class="grid-container">
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+    </div>
 </body>
 </html>
