--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     </div>
 
     <div class="arrow">
-        <p><a href="/grid.html"><i class="fa-solid fa-arrow-right"></i></a></p>
+        <p><a href="grid.html"><i class="fa-solid fa-arrow-right"></i></a></p>
         <p>Link to Grid File</p>
 
     </div>
