--- a/grid.html
+++ b/grid.html
@@ -4,38 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <style>
         
         .item1{
             grid-area: purpleBox;
             background-color:purple;
-            /* width: 35%;
-            height: 40vh; */
         }
         .item2{
             grid-area: greyBox;
             background-color: rgb(112, 108, 108);
-            /* width: 35%;
-            height: 40vh; */
         }
         .item3{
             grid-area: orangeBox;
             background-color: orange;
-            /* width: 35%;
-            height: 40vh;         */
+
         }
         .item4{
             grid-area: blueBox;
-            background-color: blue; 
-            /* width: 35%;
-            height: 20vh;         */
+            background-color: blue;
         }
         .item5{
             grid-area: greenBox;
             background-color: blue;
-            /* width: 35%;
-            height: 20vh; */
-        ;
     }
 
         .grid-container{
@@ -58,9 +50,14 @@
         height: 100px;
         width: 100px;
         border-radius: 50%;
-        background-color: #000;
+        background-color: rgb(157, 35, 35);
         text-align: center;
         padding: 10px;
+        color: #fff;
+    }
+    i{
+        color: #fff;
+        font-size: 2rem;
     }
     </style>
     <title>Grid Layout</title>
@@ -75,7 +72,7 @@
     </div>
     <div class="arrow">
         <p><a href="index.html"><i class="fa-solid fa-arrow-right"></i></a></p>
-        <p>Link to Grid File</p>
+        <p>Link to flex File</p>
 
     </div>
 </body>
